# learning

./: .gitignore  CLAUDE.md  hive_details  learning topics  pyproject.toml  scala_hbase_kafka_streaming  scala_invoice_table_df  scala_load_data_to_temp_table  scala_neg_seq  scala_pattern_gen_adv  scala_purge_data_from_hdfs  scala_to_run_query_in_aprk  unix_imp_commands  unix_learning
Documents/Theory_and_concepts/: AWS_topics.md  Apache_iceberg.md  Delta_lake.md  Slowly_changing_Dimentions.md  partitioning_strategies.md
Pyspark/test/: batch_wc_tester.py
Python/NumPy_Learning/: 1_start_numPy.py  approach.txt
Python/array/: array_01-anagram_check.py  array_02-pair-sum.py  array_03-finding-the-missing-element.py  array_04-largest-continuous-sum.py  array_05-sentence-reversal.py  array_07-unique-characters-in-tring.py
Python/automation/: github_automation.py
SQL/: 1_icc_world_cup.sql  2_customer_orders.sql  33_third_hiest_sal_with_twist.sql  3_entries.sql  4_nth_sunday_future.sql  5_to_20%_producut_80%_sale.sql  format.txt
SQL/data/: sachin_batting.csv
SQL/questions_and_solution/: 10_continious_success.sql  11_user_purchase_platform.sql  13_recommendation_system.sql  16_customer_churn.sql  18_total_charge_as_per_billing_rate.sql  1_icc_world_cup.sql  20_consecutive_empty_seats.sql  21_quarterly_store_performance.sql  22_student_with_same_marks_in_phy_&_chem.sql  25_customer_budget.sql  2_customer_orders.sql  3_entries.sql  (+2 more)
docs/: Day_1_Quick_Start.md
projects/: README.md
shared/: learn_path_lib.py  logger.py  path_utils.py  spark_session.py
(+198 files in other folders)
